# libspnavdev

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in
examples/unix/: CMakeLists.txt  Makefile  test.c
examples/win32/: test.c
src/: dev.h  serdev.c  serio.h  serio_posix.c  serio_win32.c  spnavdev.c  spnavdev.h  usbdev.c
